make width smaller

--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
     </nav>
 
     <div class="container py-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 col-md-5 px-3 px-md-0">
+      <div class="row">
+        <div class="col-lg-7 col-md-6 px-3 px-md-0">
           <h2 class="text-center mb-5">History</h2>
           <p>
             Kappa Theta Pi takes pride in being the first professional technology fraternity in the
@@ -109,7 +109,7 @@
             our members’ professional development.
           </p>
         </div>
-        <div class="col-lg-4 col-md-5 mt-5">
+        <div class="col-lg-5 col-md-6 mt-5">
           <div class="history-img">
             <img src="assets/img/about/film.jpg" alt="" />
           </div>
@@ -118,11 +118,11 @@
     </div>
 
     <div class="bg-gray">
-      <div class="container pt-5 px-lg-5">
+      <div class="container pt-5">
         <div class="row">
           <h2 class="text-center mb-5">Pillars</h2>
         </div>
-        <div class="row px-md-5">
+        <div class="row">
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="icon" style="background: #fceef3">
