--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shadow-lg sticky-top">
-      <div class="container-fluid mx-5">
+      <div class="container-fluid mx-md-5">
         <button
           class="navbar-toggler ms-auto"
           type="button"
@@ -109,7 +109,7 @@
             our members’ professional development.
           </p>
         </div>
-        <div class="col-lg-5 col-md-6 mt-5">
+        <div class="col-lg-5 col-md-6 mt-3 mt-md-5">
           <div class="history-img">
             <img src="assets/img/about/film.jpg" alt="" />
           </div>
