--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shadow-lg sticky-top">
-      <div class="container-fluid mx-5">
+      <div class="container-fluid mx-md-5">
         <button
           class="navbar-toggler ms-auto"
           type="button"
