--- a/contact.html
+++ b/contact.html
@@ -95,23 +95,23 @@
             quarters.
           </p>
         </div>
-        <div class="row mt-lg-5 pt-lg-5 px-3 px-md-0">
-          <img
-            src="assets/img/contact/walk.jpg"
-            class="img-fluid col-lg-6 order-1 order-lg-2"
-            alt=""
-          />
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
-            <h2 class="text-center mb-4">Companies</h2>
-            <p>
-              We are always looking to work with companies to put up recruitment events on campus
-              such as tech talks, information sessions, and networking sessions. Recruitment events
-              help create relationships between students and recruiters in a smaller, more relaxed
-              setting. For companies interested in hosting an event with us or would like more
-              information, please contact us at
-              <a href="mailto:uchicagoktp@gmail.com" target="_blank">uchicagoktp@gmail.com</a>.
-            </p>
-          </div>
+      </div>
+      <div class="row mt-3 mt-lg-4 pt-lg-5 px-3 px-md-0">
+        <img
+          src="assets/img/contact/walk.jpg"
+          class="img-fluid col-lg-6 order-1 order-lg-2"
+          alt=""
+        />
+        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
+          <h2 class="text-center mb-4">Companies</h2>
+          <p>
+            We are always looking to work with companies to put up recruitment events on campus such
+            as tech talks, information sessions, and networking sessions. Recruitment events help
+            create relationships between students and recruiters in a smaller, more relaxed setting.
+            For companies interested in hosting an event with us or would like more information,
+            please contact us at
+            <a href="mailto:uchicagoktp@gmail.com" target="_blank">uchicagoktp@gmail.com</a>.
+          </p>
         </div>
       </div>
     </div>
