--- a/members.html
+++ b/members.html
@@ -361,6 +361,29 @@
             Kathy Yao
           </p>
         </div>
+        <div class="col-lg-2 col-md-6">
+          <h2>Delta</h2>
+        </div>
+        <div class="col-lg-2 col-md-6">
+          <p>
+            Tanvi Bagal<br />
+            Matthew Chang<br />
+            Tiffany Cheng<br />
+            Grant Harris<br />
+            Chirag Kawediya<br />
+            Clarice Kim<br />
+            Nicholas Lee<br />
+            Zelia Mauro<br />
+            Alexa Norman<br />
+            Javier Portet<br />
+            Jonathan Roven<br />
+            Aafia Sait<br />
+            Arya Sapra<br />
+            Tristan Sharma<br />
+            Lade Tinubu<br />
+            David Xue<br />
+          </p>
+        </div>
       </div>
     </div>
 
