First rush updates

--- a/rush.html
+++ b/rush.html
@@ -85,7 +85,7 @@
     <div class="container py-5">
       <div class="scroll" id="apply">
         <div class="row px-3 px-md-0">
-          <h2 class="text-center mb-4">Rush KTP Fall 2022</h2>
+          <h2 class="text-center mb-4">Rush KTP Spring 2023</h2>
           <p>
             Thank you to everyone for participating in our Fall 2022 rush process. Check back later
             in the year for details on our Spring Rush.
@@ -102,32 +102,14 @@
             <p>
               We require all rushees to attend at least
               <b>one Info Session and one other Open Rush event</b>. If this isn't possible for you,
-              reach out to our Director of Membership, Pratham (<a
-                href="mailto:pratham@uchicago.edu"
-                >pratham@uchicago.edu</a
+              reach out to our Director of Membership, Kyle (<a
+                href="mailto:kylew@uchicago.edu"
+                >kylew@uchicago.edu</a
               >).
             </p>
             <div class="cd-timeline js-cd-timeline">
               <div class="container cd-timeline__container">
-                <div class="cd-timeline__block">
-                  <div class="cd-timeline__img">
-                    <img src="assets/img/rush/fourattable.jpg" alt="" />
-                  </div>
-
-                  <div class="cd-timeline__content">
-                    <h4>RSO Fair</h4>
-                    <p>
-                      We're excited to have a table at the UChicago Fall RSO Fair! Stop by to chat
-                      with brothers and hear more about joining KTP. We're looking forward to
-                      meeting you.
-                    </p>
-                    <p>
-                      <a style="font-style: italic"
-                        >Friday, September 30th | 3:00&#8211;5:30 PM | Main Quad</a
-                      >
-                    </p>
-                  </div>
-                </div>
+                
 
                 <div class="cd-timeline__block">
                   <div class="cd-timeline__img">
