More rush changes

--- a/rush.html
+++ b/rush.html
@@ -98,7 +98,7 @@
       <div class="container py-5">
         <div class="scroll" id="events">
           <div class="row px-3 px-md-0">
-            <h2 class="text-center mb-4">Fall Events</h2>
+            <h2 class="text-center mb-4">Spring Events</h2>
             <p>
               We require all rushees to attend at least
               <b>one Info Session and one other Open Rush event</b>. If this isn't possible for you,
@@ -119,7 +119,7 @@
                   <div class="cd-timeline__content">
                     <h4>Info Session #1</h4>
                     <p>
-                      <a href="https://fb.me/e/2VuTWCk5b">Facebook Event Link (Please RSVP)</a>
+                      <a href="https://fb.me/e/16oMkcfQZ">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b>We require all rushees to attend one information session.</b>
@@ -129,34 +129,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Monday, October 3rd | 6:00&#8211;7:00 PM | Stuart 102</a
-                    >
-                  </div>
-                </div>
-
-                <div class="cd-timeline__block">
-                  <div class="cd-timeline__img">
-                    <img src="assets/img/rush/cooking.jpg" alt="" />
-                  </div>
-
-                  <div class="cd-timeline__content">
-                    <h4>Game Night</h4>
-                    <p>
-                      <a href="https://fb.me/e/1ywnI2T1F">Facebook Event Link (Please RSVP)</a>
-                    </p>
-                    <p>
-                      <b
-                        >We require all rushees to attend either Game Night or Charity Event +
-                        Resume Review.</b
-                      >
-                      Join us for a fun evening of your favorite childhood games like Twister,
-                      ConnectFour, and many others. Come learn about the many people and communities
-                      that make us who we are!
-                    </p>
-
-                    <a style="font-style: italic; color: #303f4a"
-                      >Tuesday, October 4th | 7:00&#8211;9:00 PM | McCormick Lounge (First floor of
-                      Reynolds Club)</a
+                      >Tuesday, March 21st | 6:00&#8211;7:00 PM | Stuart 105</a
                     >
                   </div>
                 </div>
@@ -167,25 +140,23 @@
                   </div>
 
                   <div class="cd-timeline__content">
-                    <h4>Color a Smile Charity Event + Resume Review</h4>
+                    <h4>Color a Smile Charity Event</h4>
                     <p>
-                      <a href="https://fb.me/e/1ZN8V9JKV">Facebook Event Link (Please RSVP)</a>
+                      <a href="https://fb.me/e/3oRNapCFq">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b
                         >We require all rushees to attend either Game Night or Charity Event +
                         Resume Review.</b
                       >
-                      Have your resume reviewed by brothers while contributing to the Color A Smile
+                      Contributing to the Color A Smile
                       Charity with your fellow rushees. We will have drawings for you to color and
                       write messages on, to be distributed to senior citizens, troops serving
-                      overseas, and many others. Remember to bring two printed copies of your
-                      resume!
+                      overseas, and many others. 
                     </p>
 
                     <a style="font-style: italic"
-                      >Wednesday, October 5th | 7:00&#8211;8:00 PM | Peach's Cafe (First floor of
-                      Crerar Library)</a
+                      >Wednesday, March 22nd | 7:00&#8211;8:00 PM | TBD</a
                     >
                   </div>
                 </div>
