--- a/rush.html
+++ b/rush.html
@@ -122,7 +122,7 @@
                       <a href="https://fb.me/e/16oMkcfQZ">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
-                      <b>We require all rushees to attend one information session.</b>
+                      <b>We require all rushees to attend one rush event.</b>
                       They're a great opportunity for you to learn the basics about KTP, meet some
                       of our members, and decide if our community is one you’d like to become a part
                       of.
@@ -146,8 +146,7 @@
                     </p>
                     <p>
                       <b
-                        >We require all rushees to attend either Game Night or Charity Event +
-                        Resume Review.</b
+                        >We require all rushees to attend one rush event.</b
                       >
                       Contributing to the Color A Smile
                       Charity with your fellow rushees. We will have drawings for you to color and
@@ -171,18 +170,14 @@
                       <a href="https://fb.me/e/4SEpF4Lml">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
-                      <b>We require all rushees to attend one information session.</b>
+                      <b>We require all rushees to attend one rush event.</b>
                       They're a great opportunity for you to learn the basics about KTP, meet some
                       of our members, and decide if our community is one you’d like to become a part
                       of.
                     </p>
 
                     <a style="font-style: italic"
-                      >Thursday, October 6th | 6:00&#8211;7:00 PM |
-                      <a
-                        href="https://uchicago.zoom.us/j/94968204438?pwd=TElaK1Q3ZkkzUHBuU1ZDd0ZWVENhUT09"
-                        >Zoom Link</a
-                      >
+                      >Thursday, March 23rd | 6:00&#8211;7:00 PM | Stuart 105
                     </a>
                   </div>
                 </div>
