--- a/rush.html
+++ b/rush.html
@@ -190,7 +190,7 @@
                   <div class="cd-timeline__content">
                     <h4>Application Due</h4>
                     <p>Be sure to turn in your online application!</p>
-                    <a style="font-style: italic">Thursday, October 6th | 11:59 PM</a>
+                    <a style="font-style: italic">Thursday, March 23rd | 11:59 PM</a>
                   </div>
                 </div>
 
