--- a/rush.html
+++ b/rush.html
@@ -87,8 +87,10 @@
         <div class="row px-3 px-md-0">
           <h2 class="text-center mb-4">Rush KTP Spring 2023</h2>
           <p>
-            Thank you to everyone for participating in our Fall 2022 rush process. Check back later
-            in the year for details on our Spring Rush.
+            We are excited to announce our Spring 2023 Rush Cycle. Make sure to fill out 
+            our interest form, and check out our Instagram (<a 
+            href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
+            about KTP. 
           </p>
         </div>
       </div>
