--- a/rush.html
+++ b/rush.html
@@ -169,7 +169,7 @@
                   <div class="cd-timeline__content">
                     <h4>Info Session #2</h4>
                     <p>
-                      <a href="https://fb.me/e/4SEpF4Lml">Facebook Event Link (Please RSVP)</a>
+                      <a href="https://fb.me/e/2F7324rRN">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b>We require all rushees to attend one rush event.</b>
@@ -207,7 +207,7 @@
                       Our Closed Rush is invite-only and consists of interviews and two secret
                       events.
                     </p>
-                    <a style="font-style: italic">Sunday, October 9th&#8211;Friday, October 14th</a>
+                    <a style="font-style: italic">Sunday, March 26th&#8211;Friday, March 31st</a>
                   </div>
                 </div>
               </div>
@@ -285,7 +285,7 @@
                 <div class="accordion-body">
                   <p>
                     We're more than happy to work with anybody who's interested in rushing. Please
-                    reach out to our Director of Membership, Pratham (pratham@uchicago.edu), to
+                    reach out to our Director of Membership, Kyle (kylew@uchicago.edu), to
                     discuss how we can still make rushing possible for you.
                   </p>
                 </div>
