--- a/rush.html
+++ b/rush.html
@@ -88,7 +88,7 @@
           <h2 class="text-center mb-4">Rush KTP Spring 2023</h2>
           <p>
             We are excited to announce our Spring 2023 Rush Cycle. Make sure to fill out 
-            our interest form, and check out our Instagram (<a 
+            our <a href="https://forms.gle/xToGL5fAvfSjwdFS6">interest form</a>, and check out our Instagram (<a 
             href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
           </p>
