--- a/rush.html
+++ b/rush.html
@@ -86,7 +86,7 @@
       <div class="scroll" id="apply">
         <div class="row px-3 px-md-0">
           <h2 class="text-center mb-4">Rush KTP Spring 2023</h2>
-          <p>
+          <p style="text-align:center">
             We are excited to announce our Spring 2023 Rush Cycle. Make sure to fill out 
             our <a href="https://forms.gle/xToGL5fAvfSjwdFS6">interest form</a>, and check out our Instagram (<a 
             href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
@@ -101,7 +101,7 @@
         <div class="scroll" id="events">
           <div class="row px-3 px-md-0">
             <h2 class="text-center mb-4">Spring Events</h2>
-            <p>
+            <p style="text-align:center">
               We require all rushees to attend at least
               <b>one Info Session and one other Open Rush event</b>. If this isn't possible for you,
               reach out to our Director of Membership, Kyle (<a
