--- a/rush.html
+++ b/rush.html
@@ -103,7 +103,7 @@
             <h2 class="text-center mb-4">Spring Events</h2>
             <p style="text-align:center">
               We require all rushees to attend at least
-              <b>one Info Session and one other Open Rush event</b>. If this isn't possible for you,
+              <b>one event</b>. If this isn't possible for you,
               reach out to our Director of Membership, Kyle (<a
                 href="mailto:kylew@uchicago.edu"
                 >kylew@uchicago.edu</a
