charity event location

--- a/rush.html
+++ b/rush.html
@@ -157,7 +157,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Wednesday, March 22nd | 7:00&#8211;8:00 PM | TBD</a
+                      >Wednesday, March 22nd | 7:00&#8211;8:00 PM | Cox Lounge (Basement of Stuart)</a
                     >
                   </div>
                 </div>
