--- a/rush.html
+++ b/rush.html
@@ -87,7 +87,7 @@
         <div class="row px-3 px-md-0">
           <h2 class="text-center mb-4">Rush KTP Spring 2023</h2>
           <p style="text-align:center">
-            We are excited to announce our Spring 2023 Rush Cycle. Make sure to fill out 
+            We are excited to announce our Spring 2023 Rush Cycle. Our application is now live <a href = https://docs.google.com/forms/d/e/1FAIpQLSdwbknuHiQPO9NPEWYEJDQLEG8X0U2YJL3js0t4OUALE9nOAw/viewform>here</a>. Make sure to fill out 
             our <a href="https://forms.gle/xToGL5fAvfSjwdFS6">interest form</a>, and check out our Instagram (<a 
             href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
