Fall rush updates

--- a/rush.html
+++ b/rush.html
@@ -85,10 +85,10 @@
     <div class="container py-5">
       <div class="scroll" id="apply">
         <div class="row px-3 px-md-0">
-          <h2 class="text-center mb-4">Rush KTP Spring 2023</h2>
+          <h2 class="text-center mb-4">Rush KTP Fall 2023</h2>
           <p style="text-align:center">
-            We are excited to announce our Spring 2023 Rush Cycle. Our application is now live <a href = https://docs.google.com/forms/d/e/1FAIpQLSdwbknuHiQPO9NPEWYEJDQLEG8X0U2YJL3js0t4OUALE9nOAw/viewform>here</a>. Make sure to fill out 
-            our <a href="https://forms.gle/xToGL5fAvfSjwdFS6">interest form</a>, and check out our Instagram (<a 
+            We are excited to announce our Fall 2023 Rush Cycle. Our application is now live <a href = https://docs.google.com/forms/d/e/1FAIpQLSdwbknuHiQPO9NPEWYEJDQLEG8X0U2YJL3js0t4OUALE9nOAw/viewform>here</a>. Make sure to fill out 
+            our <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZTyBZTnXFdf9yME0MsMk2Vu7Fn9wfQueMqV3i5lXZ4HBHIA/viewform">interest form</a>, and check out our Instagram (<a 
             href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
           </p>
@@ -100,10 +100,9 @@
       <div class="container py-5">
         <div class="scroll" id="events">
           <div class="row px-3 px-md-0">
-            <h2 class="text-center mb-4">Spring Events</h2>
+            <h2 class="text-center mb-4">Fall Events</h2>
             <p style="text-align:center">
-              We require all rushees to attend at least
-              <b>one event</b>. If this isn't possible for you,
+              We require all rushees to attend at least one info session and one other rush event. If this isn't possible for you,
               reach out to our Director of Membership, Kyle (<a
                 href="mailto:kylew@uchicago.edu"
                 >kylew@uchicago.edu</a
@@ -121,21 +120,62 @@
                   <div class="cd-timeline__content">
                     <h4>Info Session #1</h4>
                     <p>
-                      <a href="https://fb.me/e/16oMkcfQZ">Facebook Event Link (Please RSVP)</a>
+                      <a href="https://fb.me/e/4vykwuMmy">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
-                      <b>We require all rushees to attend one rush event.</b>
+                      <b>We require all rushees to attend one info session.</b>
                       They're a great opportunity for you to learn the basics about KTP, meet some
                       of our members, and decide if our community is one you’d like to become a part
                       of.
                     </p>
 
                     <a style="font-style: italic"
-                      >Tuesday, March 21st | 6:00&#8211;7:00 PM | Stuart 105</a
+                      >Monday, October 2nd | 8:00&#8211;9:00 PM | Stuart 105</a
                     >
                   </div>
                 </div>
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/pyramid.jpg" alt="" />
+                  </div>
+                  <div class="cd-timeline__content">
+                    <h4>Meet and Greet</h4>
+                    <p>
+                      <a href="https://fb.me/e/3SoPnEKbH ">Facebook Event Link (Please RSVP)</a>
+                    </p>
+                    <p>
+                      <b>We require all rushees to attend one additional event.</b>
+                      They're a great opportunity for you to learn the basics about KTP, meet some
+                      of our members, and decide if our community is one you’d like to become a part
+                      of.
+                    </p>
 
+                    <a style="font-style: italic"
+                      >Tuesday, October 3rd | 7:00&#8211;9:00 PM | McCormick Lounge
+                    </a>
+                  </div>
+                </div>
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/pyramid.jpg" alt="" />
+                  </div>
+                  <div class="cd-timeline__content">
+                    <h4>Info Session #2</h4>
+                    <p>
+                      <a href="https://fb.me/e/6emG7IKgo">Facebook Event Link (Please RSVP)</a>
+                    </p>
+                    <p>
+                      <b>We require all rushees to attend one info session.</b>
+                      They're a great opportunity for you to learn the basics about KTP, meet some
+                      of our members, and decide if our community is one you’d like to become a part
+                      of.
+                    </p>
+
+                    <a style="font-style: italic"
+                      >Wednesday, October 4th | 9:00&#8211;10:00 PM | Stuart 102
+                    </a>
+                  </div>
+                </div>
                 <div class="cd-timeline__block">
                   <div class="cd-timeline__img">
                     <img src="assets/img/rush/point.jpg" alt="Picture" />
@@ -144,11 +184,11 @@
                   <div class="cd-timeline__content">
                     <h4>Color a Smile Charity Event</h4>
                     <p>
-                      <a href="https://fb.me/e/3oRNapCFq">Facebook Event Link (Please RSVP)</a>
+                      <a href="https://fb.me/e/9634oWzQq ">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b
-                        >We require all rushees to attend one rush event.</b
+                        >We require all rushees to attend one additional event.</b
                       >
                       Contributing to the Color A Smile
                       Charity with your fellow rushees. We will have drawings for you to color and
@@ -157,30 +197,8 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Wednesday, March 22nd | 7:00&#8211;8:00 PM | Cox Lounge (Basement of Stuart)</a
+                      >Thursday, October 5th | 7:00&#8211;8:30 PM | McCormick Lounge (Basement of Stuart)</a
                     >
-                  </div>
-                </div>
-
-                <div class="cd-timeline__block">
-                  <div class="cd-timeline__img">
-                    <img src="assets/img/rush/pyramid.jpg" alt="" />
-                  </div>
-                  <div class="cd-timeline__content">
-                    <h4>Info Session #2</h4>
-                    <p>
-                      <a href="https://fb.me/e/2F7324rRN">Facebook Event Link (Please RSVP)</a>
-                    </p>
-                    <p>
-                      <b>We require all rushees to attend one rush event.</b>
-                      They're a great opportunity for you to learn the basics about KTP, meet some
-                      of our members, and decide if our community is one you’d like to become a part
-                      of.
-                    </p>
-
-                    <a style="font-style: italic"
-                      >Thursday, March 23rd | 6:00&#8211;7:00 PM | Stuart 105
-                    </a>
                   </div>
                 </div>
 
@@ -192,7 +210,7 @@
                   <div class="cd-timeline__content">
                     <h4>Application Due</h4>
                     <p>Be sure to turn in your online application!</p>
-                    <a style="font-style: italic">Thursday, March 23rd | 11:59 PM</a>
+                    <a style="font-style: italic">Thursday, October 5th | 11:59 PM</a>
                   </div>
                 </div>
 
@@ -207,7 +225,7 @@
                       Our Closed Rush is invite-only and consists of interviews and two secret
                       events.
                     </p>
-                    <a style="font-style: italic">Sunday, March 26th&#8211;Friday, March 31st</a>
+                    <a style="font-style: italic">Sunday, October 8th&#8211;Friday, October 13th</a>
                   </div>
                 </div>
               </div>
