--- a/rush.html
+++ b/rush.html
@@ -145,7 +145,7 @@
                     </p>
                     <p>
                       <b>We require all rushees to attend one additional event.</b>
-                      They're a great opportunity for you to learn the basics about KTP, meet some
+                      They are a great opportunity for you to learn the basics about KTP, meet some
                       of our members, and decide if our community is one you’d like to become a part
                       of.
                     </p>
