deploy pages fixing now

--- a/rush.html
+++ b/rush.html
@@ -145,9 +145,7 @@
                     </p>
                     <p>
                       <b>We require all rushees to attend one additional event.</b>
-                      They are a great opportunity for you to learn the basics about KTP, meet some
-                      of our members, and decide if our community is one you’d like to become a part
-                      of.
+                      Come join us for a casual session to speak with current brothers and learn more about our chapter!
                     </p>
 
                     <a style="font-style: italic"
