--- a/rush.html
+++ b/rush.html
@@ -87,8 +87,9 @@
         <div class="row px-3 px-md-0">
           <h2 class="text-center mb-4">Rush KTP Fall 2023</h2>
           <p style="text-align:center">
-            We are excited to announce our Fall 2023 Rush Cycle. Check out our Instagram (<a 
-            href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
+            We are excited to announce our Fall 2023 Rush Cycle. Make sure to fill out our interest form (<a 
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeZTyBZTnXFdf9yME0MsMk2Vu7Fn9wfQueMqV3i5lXZ4HBHIA/viewform">@uchicagoktp</a>) and 
+            check out our Instagram (<a href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
           </p>
         </div>
