--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </h3>
         <div class="mb-4">
           <a href="rush.html#apply" class="btn-rush">RUSH</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZTyBZTnXFdf9yME0MsMk2Vu7Fn9wfQueMqV3i5lXZ4HBHIA/viewform" class="btn-rush">INTEREST FORM</a>
         </div>
       </div>
     </div>
