--- a/rush.html
+++ b/rush.html
@@ -87,9 +87,9 @@
         <div class="row px-3 px-md-0">
           <h2 class="text-center mb-4">Rush KTP Fall 2023</h2>
           <p style="text-align:center">
-            We are excited to announce our Fall 2023 Rush Cycle. Make sure to fill out our  <a 
-            href="https://docs.google.com/forms/d/e/1FAIpQLSeZTyBZTnXFdf9yME0MsMk2Vu7Fn9wfQueMqV3i5lXZ4HBHIA/viewform">interest form</a> and 
-            check out our Instagram (<a href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
+            We are excited to announce our Fall 2023 Rush Cycle. Our <a 
+            href="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeKLdJd8zPuWRTKmn2P5nep75R7Lt0AMZDlD3v-7Uxnr8-I-g/closedform">application</a> is live and due at 11:59 PM on Thursday, October 5th.
+            Check out our Instagram (<a href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
           </p>
         </div>
