fixing rush page

--- a/rush.html
+++ b/rush.html
@@ -195,7 +195,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Thursday, October 5th | 7:00&#8211;8:30 PM | McCormick Lounge (Basement of Stuart)</a
+                      >Thursday, October 5th | 7:00&#8211;8:30 PM | McCormick Lounge</a
                     >
                   </div>
                 </div>
