--- a/members.html
+++ b/members.html
@@ -384,6 +384,31 @@
             David Xue<br />
           </p>
         </div>
+        <div class="col-lg-2 col-md-6">
+          <h2>Epsilon</h2>
+        </div>
+        <div class="col-lg-2 col-md-6">
+          <p>
+            Arjun Garg<br />
+            Catherine Lu<br />
+            Chaplin Huang<br />
+            Charlotte Roth<br />
+            Erik Ely<br />
+            Fatima Madey<br />
+            George Wang<br />
+            Gerald Yeo<br />
+            Hermela Selam<br />
+            Mariam Katsadze<br />
+            Olivia Moreno<br />
+            Ranya Sharma<br />
+            Rohan Madhogarhia<br />
+            Ryan Lobo<br />
+            Siya Kalra<br />
+            Skylar Liu<br />
+            Mitchell Velasco<br />
+            Spencer Dearman <br/>
+          </p>
+        </div>
       </div>
     </div>
 
