adding zeta list

--- a/members.html
+++ b/members.html
@@ -409,6 +409,25 @@
             Spencer Dearman <br/>
           </p>
         </div>
+        <div class="col-lg-2 col-md-6">
+          <h2>Zeta</h2>
+        </div>
+        <div class="col-lg-2 col-md-6">
+          <p>
+            Anika Bansal<br />
+            Oscar Chen<br />
+            Kasey Corra<br />
+            Luca Dovichi<br />
+            Alan Hernedez<br />
+            Minseo Kim<br />
+            Quincy Leung<br />
+            Connor McGraw<br />
+            Jessica Ortiz<br />
+            Ashton Tang<br />
+            Helen Tian<br />
+            Robert Xing<br />
+          </p>
+        </div>
       </div>
     </div>
 
