added new E board

--- a/members.html
+++ b/members.html
@@ -91,52 +91,57 @@
 
         <div class="row justify-content-center">
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
-            <img class="w-100 mb-2" src="assets/img/members/Pratham_Gandhi.jpg" alt="" />
-            <h2 class="eboard-name mb-0">Pratham Gandhi</h2>
-            <p>President</p>
-          </div>
-          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Minjoo_Song.jpg" alt="" />
             <h2 class="eboard-name mb-0">Minjoo Song</h2>
-            <p>Vice President</p>
+            <p>President</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Iris_Hwang.jpg" alt="" />
             <h2 class="eboard-name mb-0">Iris Hwang</h2>
+            <p>Vice President</p>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
+            <img class="w-100 mb-2" src="assets/img/members/Catherine_Lu.jpg" alt="" />
+            <h2 class="eboard-name mb-0">Catherine Lu</h2>
             <p>Director of Engagement</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img
               class="w-100 mb-2"
-              src="assets/img/members/Gregorio_Florentino_Sanchez.jpg"
+              src="assets/img/members/Siya_Kalra.jpg"
               alt=""
             />
-            <h2 class="eboard-name mb-0">Gregorio Florentino Sanchez</h2>
+            <h2 class="eboard-name mb-0">Siya Kalra</h2>
             <p>Director of Finance</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
-            <img class="w-100 mb-2" src="assets/img/members/Zelia_Mauro.jpg" alt="" />
-            <h2 class="eboard-name mb-0">Zelia Mauro</h2>
+            <img class="w-100 mb-2" src="assets/img/members/Jessica_Ortiz.jpg" alt="" />
+            <h2 class="eboard-name mb-0">Jessica Ortiz</h2>
             <p>Director of Marketing</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Kyle_Wong.jpg" alt="" />
             <h2 class="eboard-name mb-0">Kyle Wong</h2>
-            <p>Director of Membership</p>
+            <p>Co-Director of Membership</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
-            <img class="w-100 mb-2" src="assets/img/members/Joshua_Ahn.jpg" alt="" />
-            <h2 class="eboard-name mb-0">Joshua Ahn</h2>
+            <img class="w-100 mb-2" src="assets/img/members/Ryan_Lobo.jpg" alt="" />
+            <h2 class="eboard-name mb-0">Ryan Lobo</h2>
+            <p>Co-Director of Membership</p>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
+            <img class="w-100 mb-2" src="assets/img/members/Lade_Tinubu.jpg" alt="" />
+            <h2 class="eboard-name mb-0">Lade Tinubu</h2>
             <p>Director of Outreach</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
-            <img class="w-100 mb-2" src="assets/img/members/Katherine_Sun.jpg" alt="" />
-            <h2 class="eboard-name mb-0">Katie Sun</h2>
+            <img class="w-100 mb-2" src="assets/img/members/Chaplin_Huang.jpg" alt="" />
+            <h2 class="eboard-name mb-0">Chaplin Huang</h2>
             <p>Director of Professional Development</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
-            <img class="w-100 mb-2" src="assets/img/members/Rohan_Deme.jpg" alt="" />
-            <h2 class="eboard-name mb-0">Rohan Deme</h2>
+            <img class="w-100 mb-2" src="assets/img/members/Nicholas_Lee.jpg" alt="" />
+            <h2 class="eboard-name mb-0">Nicholas Lee</h2>
             <p>Director of Technology</p>
           </div>
         </div>
