adding auto crop

--- a/members.html
+++ b/members.html
@@ -115,7 +115,7 @@
             <p>Director of Finance</p>
           </div>
           <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
-            <img class="w-100 mb-2" src="assets/img/members/Jessica_Ortiz.jpg" alt="" />
+            <img class="w-100 mb-2"  style="width: 156px; height: 156px; object-fit: cover;" src="assets/img/members/Jessica_Ortiz.jpg" alt="" />
             <h2 class="eboard-name mb-0">Jessica Ortiz</h2>
             <p>Director of Marketing</p>
           </div>
